--- a/config/remote_proxy/example_inventory/files_and_templates/volumes/nginx/conf/upstreams.proxy.conf.template.j2
+++ b/config/remote_proxy/example_inventory/files_and_templates/volumes/nginx/conf/upstreams.proxy.conf.template.j2
@@ -1,4 +1,4 @@
-# Define the upstream host(s) that are running stroom-proxy-rmeote
+# Define the upstream host(s) that are running stroom-proxy-remote
 {% for host in groups['stroom_remote_proxy_stack'] %}
 server {{ hostvars[host]['inventory_hostname'] }}:<<<STROOM_PROXY_PORT>>>;
 {% endfor %}
