--- a/config/multi_node_mixed_cluster/example_inventory/files_and_templates/volumes/nginx/conf/upstreams.stroom.ui.conf.template.j2
+++ b/config/multi_node_mixed_cluster/example_inventory/files_and_templates/volumes/nginx/conf/upstreams.stroom.ui.conf.template.j2
@@ -1,5 +1,5 @@
 # Define the upstream host(s) that are running stroom
 {% for host in groups['stroom_and_proxy'] %}
-server {{ hostvars[host]['vagrant_ip_address'] | default(hostvars[host]['inventory_hostname'])}}:<<<STROOM_PORT>>>;
+server {{ hostvars[host]['public_ip_address'] | default(hostvars[host]['inventory_hostname'])}}:<<<STROOM_PORT>>>;
 {% endfor %}
 
