Fix variable in docker-ce.repo.j2

--- a/stroom/roles/setup/docker/templates/docker-ce.repo.j2
+++ b/stroom/roles/setup/docker/templates/docker-ce.repo.j2
@@ -1,5 +1,5 @@
 [docker-ce-stable]
 name=Docker CE Stable
-baseurl={{ https://download.docker.com/linux/centos/7/$basearch/stable }}
+baseurl={{ docker_yum_repo_base_url }}
 enabled=1
 gpgcheck=0
