Add modeline to proxy config .j2

--- a/config/multi_node_mixed_cluster/example_inventory/files_and_templates/stroom-proxy/config/config.yml.j2
+++ b/config/multi_node_mixed_cluster/example_inventory/files_and_templates/stroom-proxy/config/config.yml.j2
@@ -151,3 +151,5 @@ proxyConfig:
       trustStorePassword: "password"
       trustStoreType: "JKS"
       trustSelfSignedCertificates: false
+
+# vim: set filetype=yaml tabstop=2 shiftwidth=2 expandtab:
