--- a/config/multi_node_mixed_cluster/example_inventory/files_and_templates/stroom/config/scripts.env.j2
+++ b/config/multi_node_mixed_cluster/example_inventory/files_and_templates/stroom/config/scripts.env.j2
@@ -42,5 +42,6 @@
   # set in start.sh if not set here.
   # Xms: The initial java heap size
   # Xmx: The maximum java heap size. This should be less than the available RAM.
-  JAVA_OPTS="-Xms512m -Xmx2048m"
+# JAVA_OPTS="-Xms512m -Xmx2048m"
+JAVA_OPTS="{{ java_opts }}"
 }
