--- a/config/multi_node_mixed_cluster/example_inventory/files_and_templates/stroom/config/config.yml.j2
+++ b/config/multi_node_mixed_cluster/example_inventory/files_and_templates/stroom/config/config.yml.j2
@@ -1,5 +1,4 @@
 
-
 # Stroom configuration file
 # =========================
 
@@ -86,7 +85,6 @@ logging:
 
   appenders:
 
-
     # Minute rolled files for stroom/datafeed, will be curl'd/deleted by stroom-log-sender
   - type: file
     currentLogFilename: logs/app/app.log
@@ -116,7 +114,6 @@ logging:
     logFormat: "%-6level [%d{\"yyyy-MM-dd'T'HH:mm:ss.SSS'Z'\",UTC}] [%t] %logger - %X{code} %msg %n"
 
 
-
 # This section contains the Stroom configuration properties
 # For more information see:
 # https://gchq.github.io/stroom-docs/user-guide/properties.html
@@ -125,7 +122,7 @@ appConfig:
   commonDbDetails:
     connection:
       jdbcDriverClassName: "com.mysql.cj.jdbc.Driver"
-      jdbcDriverUrl: "jdbc:mysql://{{ db_host }}:{{ db_port }}/stroom?useUnicode=yes&characterEncoding=UTF-8"
+      jdbcDriverUrl: "jdbc:mysql://{{ stroom_db_host }}:{{ stroom_db_port }}/stroom?useUnicode=yes&characterEncoding=UTF-8"
       jdbcDriverUsername: "{{ stroom_db_username }}"
       jdbcDriverPassword: "{{ stroom_db_password }}"
   contentPackImport:
@@ -163,7 +160,7 @@ appConfig:
       db:
         connection:
           jdbcDriverClassName: "com.mysql.cj.jdbc.Driver"
-          jdbcDriverUrl: "jdbc:mysql://{{ db_host }}:{{ db_port }}/stats?useUnicode=yes&characterEncoding=UTF-8"
+          jdbcDriverUrl: "jdbc:mysql://{{ stats_db_host }}:{{ stats_db_port }}/stats?useUnicode=yes&characterEncoding=UTF-8"
           jdbcDriverUsername: "{{ stats_db_username }}"
           jdbcDriverPassword: "{{ stats_db_password }}"
 
