Add java bin path BEFORE $PATH

--- a/stroom/roles/setup/java/templates/jdk_home.sh.j2
+++ b/stroom/roles/setup/java/templates/jdk_home.sh.j2
@@ -3,6 +3,6 @@
 # Set JDK installation directory according to selected Java compiler
 export JAVA_HOME="{{ java_home_dir }}"
 
-export PATH="${PATH}:${JAVA_HOME}/bin"
+export PATH="${JAVA_HOME}/bin:${PATH}"
 
 # vim: set filetype=sh tabstop=2 shiftwidth=2 expandtab:
