Add systemd tasks for stroom and stroom-proxy

--- a/stroom/roles/non_docker_stroom/systemd/templates/etc/systemd/system/stroom.service.j2
+++ b/stroom/roles/non_docker_stroom/systemd/templates/etc/systemd/system/stroom.service.j2
@@ -1,5 +1,5 @@
 [Unit]
-Description=Stroom Proxy {{ stroom_version }} service
+Description=Stroom {{ stroom_version }} service
 After=syslog.target network.target
 
 [Service]
