Update example config

--- a/config/multi_node_mixed_cluster/example_inventory/files_and_templates/stroom/config/config.yml.j2
+++ b/config/multi_node_mixed_cluster/example_inventory/files_and_templates/stroom/config/config.yml.j2
@@ -146,8 +146,8 @@ appConfig:
   security:
     authentication:
       preventLogin: false
-    identity:
-      useDefaultOpenIdCredentials: "false"
+      openId:
+        identityProviderType: "TEST_CREDENTIALS"
   serviceDiscovery:
     enabled: "false"
   statistics:
