Fix IDP setting for stroom 7.4

--- a/config/single_node_stroom_core_stack/example_inventory/files_and_templates/volumes/stroom/config/config.yml.j2
+++ b/config/single_node_stroom_core_stack/example_inventory/files_and_templates/volumes/stroom/config/config.yml.j2
@@ -143,9 +143,9 @@ appConfig:
     port: "${API_GATEWAY_PORT:-443}"
   security:
     authentication:
+      openId:
+        identityProviderType: TEST_CREDENTIALS
       preventLogin: false
-    identity:
-      useDefaultOpenIdCredentials: "${USE_DEFAULT_OPEN_ID_CREDENTIALS:-false}"
   serviceDiscovery:
     enabled: "${STROOM_SERVICE_DISCOVERY_ENABLED:-false}"
     zookeeperUrl: "${STROOM_SERVICE_DISCOVERY_ZOOKEEPER_URL:-localhost:2181}"
