Fix IDP config for mixed deploy

--- a/config/multi_node_mixed_cluster/example_inventory/files_and_templates/stroom/config/config.yml.j2
+++ b/config/multi_node_mixed_cluster/example_inventory/files_and_templates/stroom/config/config.yml.j2
@@ -145,9 +145,9 @@ appConfig:
     port: "443"
   security:
     authentication:
+      openId:
+        identityProviderType: TEST_CREDENTIALS
       preventLogin: false
-    identity:
-      useDefaultOpenIdCredentials: "false"
   serviceDiscovery:
     enabled: "false"
   statistics:
